# calib3d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  calib3d_cli.cpp
calib3d/: CMakeLists.txt
calib3d/include/calib3d/: BAProblem.h  CameraCalibRefinementProblem.h  Dataset.h  NViewReconstruction.h  RansacEngine.h  RansacEngine.hpp  ThreeViewReconstruction.h  ThreeViewReconstructionWithBA.h  calib3d.h  calib_utils.h  calib_utils.hpp  dataset.h  ransac.h  ransac.hpp  types.h
calib3d/src/: BAProblem.cpp  CameraCalibRefinementProblem.cpp  Dataset.cpp  NViewReconstruction.cpp  ThreeViewReconstruction.cpp  ThreeViewReconstructionWithBA.cpp  calib3d.cpp  dataset.cpp
calib3d/tests/: test_calib_utils.cpp  test_main.cpp  test_reconstruction.cpp  test_three_view_reconstruction.cpp
data/: accurate-calibrations-and-accurate-world-points.json
